5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1638_651.log
== TEST (2019-04-13 15:17:21) 
-- CODE:
alt = float(input("altura: "))
sexo = input("sexo: ")
pesoh = (72.7 * alt) - 58
pesom = (62.1 * alt) - 44.7
if (sexo.upper() == M):
	print(pesoh)
if (sexo.upper() == F):
	print(pesom)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (sexo.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:20:49) 
-- CODE:
alt = float(input("altura: "))
sexo = input("sexo: ")
pesoh = (72.7 * alt) - 58
pesom = (62.1 * alt) - 44.7
if (sexo.upper() == M):
	print(pesoh)
if (sexo.upper() == F):
	print(pesom)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (sexo.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:22:01) 
-- CODE:
alt = float(input("altura: "))
sex = input("sexo: ")
pesoh = (72.7 * alt) - 58
pesom = (62.1 * alt) - 44.7
if (sex.upper() == M):
	print(pesoh)
if (sexo.upper() == F):
	print(pesom)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (sex.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:23:08) 
-- CODE:
alt = float(input("altura: "))
sex = input("sexo: ")
pesoh = (72.7 * alt) - 58
pesom = (62.1 * alt) - 44.7
if (sex.upper() == M):
	print(pesoh)
if (sexo.upper() == F):
	print(pesom)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (sex.upper() == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:25:03) 
-- CODE:
alt = float(input("altura: "))
sex = input("sexo: ")
pesoh = (72.7 * alt) - 58
pesom = (62.1 * alt) - 44.7
if (sex == M):
	print(pesoh)
if (sex == F):
	print(pesom)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (sex == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:25:48) 
-- CODE:
alt = float(input("altura: "))
sex = input("sexo: ")
pesoh = (72.7 * alt) - 58
pesom = (62.1 * alt) - 44.7
if (sex.upper() == "M"):
	print(pesoh)
if (sex.upper() == "F"):
	print(pesom)
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:27:08) 
-- CODE:
alt = float(input("altura: "))
sex = input("sexo: ")
pesoh = (72.7 * alt) - 58
pesom = (62.1 * alt) - 44.7
if (sex.upper() == "M"):
	print(round(pesoh,2))
if (sex.upper() == "F"):
	print(round(pesom,2))
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:27:27) 
-- CODE:
alt = float(input("altura: "))
sex = input("sexo: ")
pesoh = (72.7 * alt) - 58
pesom = (62.1 * alt) - 44.7
if (sex.upper() == "M"):
	print(round(pesoh,2))
if (sex.upper() == "F"):
	print(round(pesom,2))
-- EXECUTION TIME:
0.093281
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
